# ThirdYearProject

./: .gitignore  .gitignore_spare  .gitmodules  TurtlebotRos2SetupScript.sh
OpenCVCode/FeatureDetection/HistogramSegmentation/: CMakeLists.txt  FeatureDetect.cpp
OpenCVCode/FeatureDetection/HistogramSegmentation/include/: Graph.hpp  possibleObject.hpp
OpenCVCode/FeatureDetection/HistogramSegmentation/src/: Camera.cpp  FeatureDetect.cpp  Statistics.cpp  imgProcessing.cpp
OpenCVCode/FeatureDetection/ObjectTracking/: CMakeLists.txt
OpenCVCode/FeatureDetection/ObjectTracking/LibProject/inc/: Camera.h  Map.h  Statistics.h  possibleObject.h
OpenCVCode/FeatureDetection/ObjectTracking/LibProject/src/: CMakeLists.txt  Camera.cpp  (+4 more)
OpenCVCode/FeatureDetection/OpenCV_Feature_Detection/: CMakeLists.txt  FeatureDetect.cpp
OpenCVCode/VideoProcessing/: CMakeLists.txt  Makefile  ObjInfo.cpp  ObjInfo.h  Tomato HSV.txt  VideoProc  VideoProc.cpp
OpenCVCode/testProg/: DisplayImage.cpp
Resources and Report/: ProgressReport.aux  ProgressReport.bbl  ProgressReport.bcf  ProgressReport.bib  ProgressReport.blg  ProgressReport.run.xml  ProgressReport.tex  Random Explorer.docx  Specification.docx
ros2OnBot_ws/: pkgBuild
ros2OnBot_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2OnBot_ws/log/: latest_build
ros2TurtleBot3_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2TurtleBot3_ws/log/: latest_build
ros2TurtleBot3_ws/src/square_move/: CMakeLists.txt  package.xml
ros2TurtleBot3_ws/src/square_move/src/: mover.cpp
(+89 files in other folders)
